fix: input overlapping with password preview toggle. overflow: hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,3 +200,9 @@ form#login, form#register {
     left: 50%;
     top: 50%;
 }
+
+input.focus{
+    width: 90%;
+    overflow: hidden;
+    text-overflow: clip;
+}
